Revision history for Perl extension WWW-JSON

{{$NEXT}}

0.03 2013-06-04T04:26:03Z
    - 5.08 support, since it was trivial to implement
    - Added www-json-response->handle

0.02 2013-06-02T00:51:24Z

    - First release on CPAN

0.01 2013-06-02T00:30:11Z

    - First release!
