@@ -1,6 +1,11 @@
 Revision history for Perl extension WWW-JSON
 
 {{$NEXT}}
+    - Added response->error 
+    - Create HTTP::Response objects instead of using lwp->get, ->post etc
+    - Refactored how auth roles work, no more using lwp->default_header('Authorization') nonsense
+    - Added ability for a response to retry itself
+    - Added a simple example using the metacpan api
 
 0.03 2013-06-04T04:26:03Z
     - 5.08 support, since it was trivial to implement
